index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}


body {
 
  margin: 0 auto;
  font-family: "Outfit", sans-serif;
  font-weight: 400;
  color: #5f564d;
  background-color: #ffffff;
  line-height: 1.5;
}
/** Typography */
h1 {
  font-family: "Young Serif", serif;
  color: #312e2c;
  font-weight: 400;
  line-height: 1;
  font-size: 2.25rem;
  margin-top: 2.5rem;
}

h2 {
  font-family: "Young Serif", serif;
  color: #854632;
  font-size: 1.75rem;
  font-weight: 400;
}

img {
  width: 100%;
}

/* ! Main content */
.container {
  
  margin: 0 auto;
  padding: 2.5em 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2em;
}

.description {
  margin-top: 1.5em;
}
.preparation {
  background-color: #fff7fb;
  padding: 1.5em;
  border-radius: 0.75em;
}

.preparation > p {
  color: #7a284e;
  font-weight: 600;
  line-height: 1;
  margin-bottom: 1em;
  font-size: 1.25rem;
}

.preparation ul {
  padding-left: 2em;
}
.preparation li {
  padding-left: 1em;
}

.preparation li::marker {
  color: #7a284e;
}
.preparation,
.ingredients,
.instructions,
.nutrition {
  align-self: stretch;
}
.ingredients h2,
.instructions h2,
.nutrition h2 {
  margin-bottom: 1.5rem;
}



.recipe-list {
  padding-left: 1.2rem;
  margin-left: 0.5rem;
}


.recipe-list li {
  padding-left: 1em;
  margin-bottom: 0.5em;
}

.recipe-list li::marker {
  color: #854632;
}

.nutrition-table {
  margin-top: 1.5em;
  font-size: 1rem;
}

.nutrition-quantity {
  color: #854632;
  font-weight: 700;
}
table {
  width: 100%;
  border-collapse: collapse;
}
table tr {
  border-bottom: 1px solid #e3ddd7;
}
table td {
  padding: 0.75em 2em;
}

hr {
  width: 100%;
  border: 1px solid  #e3ddd7;
  /* background-color: #e3ddd7;
  height: 1px; */
}

footer {
  text-align: center;
  margin-top: 1em;
}

footer a {
  color: #7a284e;
}

@media (max-width: 599px) {
  .heading > img {
    margin-left: -2.5em; /* negative margin to offset container padding */
    margin-right: -2.5em;
    margin-top: -2.5em;
    flex: none;
    width: calc(100% + 5em);
    
    
  }
}

@media (min-width: 601px) {
  body {
    background-color: #f3e5d7;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    align-items: center;
    padding-top: 8em;
    padding-bottom: 7em;
   
  }

  .container {
    background-color: #ffffff;
    width: 80%;
    padding: 2.5em;
    border-radius: 1.5em;
    
  }

  h1 {
    font-size: 2.5rem;
  }
  img {
    border-radius: 0.75em;
    width: 100%;
    height: auto;
  }
}

@media (min-width: 900px) {
  /* 900px */

  .container {
    max-width: 735px;
  }
  img {
    width: 100%;
    height: auto;
  }
}

